--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "last 1 safari version"
   ],
   "devDependencies": {
+    "@tsconfig/node18": "^18.2.2",
+    "@types/chalk": "^2.2.0",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -43,7 +45,7 @@
     "axios-rate-limit": "^1.3.0",
     "axios-retry": "^3.2.3",
     "babel-eslint": "^10.0.0",
-    "chalk": "^5.3.0",
+    "chalk": "^4.1.2",
     "eslint": "^7.5.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^6.0.0",
@@ -57,8 +59,8 @@
     "lint-staged": "^14.0.0",
     "prettier": "^2.0.0",
     "sass": "^1.45.2",
-    "ts-node": "^10.3.0",
-    "typescript": "^4.1.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2",
     "vite": "^4.4.0"
   },
   "packageManager": "yarn@3.6.1"
